# x-faktor

./: .gitignore  README.md  episode-example.json  format.json  main.ipynb  main.py  pyproject.toml  renderer.py  replicate.pyi
