[tool.poetry]
name = "x-faktor"
version = "0.1.0"
description = ""
authors = ["Florian Kaiser <mail@floriankaiser.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.0.1"
openai = "^1.57.4"
elevenlabs = "^1.50.2"
lumaai = "^1.2.1"
replicate = "^1.0.4"
requests = "^2.32.3"
types-requests = "^2.32.0.20241016"
pydantic = "^2.10.3"
tqdm = "^4.67.1"
boto3 = "^1.35.81"
python-ffmpeg = "^2.0.12"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
